# xsim

./: CMakeLists.txt  LICENSE
envs/dual_arm/: CMakeLists.txt  bullet_gui.cpp  controller.hpp  dqn.cpp  environment.hpp  experience_replay.cpp  experience_replay.hpp  follow_trajectory_controller.cpp  follow_trajectory_controller.hpp  grasp_controller.cpp  grasp_controller.hpp  gui.cpp  gui.hpp  kuka_iiwa_ik_solver.cpp  kuka_iiwa_ik_solver.hpp  mainwindow.cpp  planning_interface.cpp  player.hpp  reachability.cpp  robot.cpp  robot.hpp  run_env.cpp  server.hpp  trainer.cpp  ur5_ik_solver.hpp  world.cpp  world.hpp
envs/dual_arm/demo/: crop.sh
envs/dual_arm/python/: best_weights.pth  client.py  main.py  scaler.py  utils.py
envs/dual_arm/python/runs/Feb02_08-44-40_iti-454Push/: events.out.tfevents.1675320280.iti-454.342469.0
envs/dual_arm/python/runs/Feb02_08-46-06_iti-454Push/: events.out.tfevents.1675320366.iti-454.342979.0
envs/dual_arm/python/runs/Feb02_08-49-18_iti-454Push/: events.out.tfevents.1675320558.iti-454.343838.0
envs/dual_arm/python/runs/Feb02_08-49-43_iti-454Push/: events.out.tfevents.1675320583.iti-454.344090.0
envs/dual_arm/python/runs/Feb02_08-50-16_iti-454Push/: events.out.tfevents.1675320616.iti-454.344513.0
envs/dual_arm/python/runs/Feb02_09-21-54_iti-454Push/: events.out.tfevents.1675322514.iti-454.354070.0
envs/dual_arm/python/runs/Feb02_09-24-26_iti-454Push/: events.out.tfevents.1675322666.iti-454.354844.0
envs/dual_arm/python/runs/Feb02_09-25-46_iti-454Push/: events.out.tfevents.1675322746.iti-454.355286.0
envs/dual_arm/python/runs/Feb02_09-39-34_iti-454Push/: events.out.tfevents.1675323574.iti-454.360897.0
envs/dual_arm/python/runs/Feb02_09-41-30_iti-454Push/: events.out.tfevents.1675323690.iti-454.361640.0
envs/dual_arm/python/runs/Feb02_09-42-41_iti-454Push/: events.out.tfevents.1675323761.iti-454.362027.0
envs/dual_arm/python/runs/Feb02_09-43-34_iti-454Push/: events.out.tfevents.1675323814.iti-454.362322.0
envs/dual_arm/python/runs/Feb02_09-44-28_iti-454Push/: events.out.tfevents.1675323868.iti-454.362613.0
envs/dual_arm/python/runs/Feb02_09-47-33_iti-454Push/: events.out.tfevents.1675324053.iti-454.363514.0
envs/dual_arm/python/runs/Feb02_09-49-15_iti-454Push/: events.out.tfevents.1675324155.iti-454.363972.0
envs/dual_arm/python/runs/Feb02_09-50-00_iti-454Push/: events.out.tfevents.1675324200.iti-454.364246.0
envs/dual_arm/python/runs/Feb02_09-54-10_iti-454Push/: events.out.tfevents.1675324450.iti-454.365243.0
envs/dual_arm/python/runs/Feb02_09-55-01_iti-454Push/: events.out.tfevents.1675324501.iti-454.365602.0
envs/dual_arm/python/runs/Feb02_09-59-07_iti-454Push/: events.out.tfevents.1675324747.iti-454.366598.0
envs/dual_arm/python/runs/Feb02_10-17-03_iti-454Push/: events.out.tfevents.1675325823.iti-454.370690.0
envs/dual_arm/python/runs/Feb02_10-17-42_iti-454Push/: events.out.tfevents.1675325862.iti-454.370935.0
envs/dual_arm/python/runs/Feb02_10-20-00_iti-454Push/: events.out.tfevents.1675326000.iti-454.371506.0
envs/dual_arm/python/runs/Feb02_10-21-58_iti-454Push/: events.out.tfevents.1675326118.iti-454.372349.0
envs/dual_arm/python/runs/Feb02_10-37-59_iti-454Push/: events.out.tfevents.1675327079.iti-454.375987.0
envs/dual_arm/python/runs/Feb02_10-38-40_iti-454Push/: events.out.tfevents.1675327120.iti-454.376327.0
envs/dual_arm/python/runs/Feb02_10-40-16_iti-454Push/: events.out.tfevents.1675327216.iti-454.377027.0
envs/dual_arm/python/runs/Feb02_10-45-16_iti-454Push/: events.out.tfevents.1675327516.iti-454.378456.0
envs/dual_arm/python/runs/Feb02_10-46-17_iti-454Push/: events.out.tfevents.1675327577.iti-454.379009.0
envs/dual_arm/python/runs/Feb02_10-48-58_iti-454Push/: events.out.tfevents.1675327738.iti-454.380832.0
envs/dual_arm/python/runs/Feb02_10-49-47_iti-454Push/: events.out.tfevents.1675327787.iti-454.381099.0
envs/dual_arm/runs/Feb01_19-30-09_iti-454_LunarLander/: events.out.tfevents.1675272609.iti-454.168883.0
envs/dual_arm/runs/Feb01_19-48-14_iti-454_LunarLander/: events.out.tfevents.1675273694.iti-454.174122.0
envs/dual_arm/runs/Feb01_19-49-27_iti-454_LunarLander/: events.out.tfevents.1675273767.iti-454.174370.0
envs/dual_arm/runs/Feb01_19-50-45_iti-454_LunarLander/: events.out.tfevents.1675273845.iti-454.174887.0
envs/dual_arm/runs/Feb01_19-52-10_iti-454_LunarLander/: events.out.tfevents.1675273930.iti-454.175377.0
envs/dual_arm/runs/Feb01_19-54-19_iti-454_LunarLander/: events.out.tfevents.1675274059.iti-454.176131.0
envs/dual_arm/runs/Feb01_20-07-19_iti-454Push/: events.out.tfevents.1675274839.iti-454.178860.0
envs/push/: CMakeLists.txt  agent.cpp  agent.hpp  bullet_gui.hpp  client.py  dqn.cpp  dqn.hpp  environment.cpp  environment.hpp  experience_replay.cpp  experience_replay.hpp  gui.cpp  gui.hpp  mainwindow.cpp  mainwindow.hpp  planner.cpp  planner.hpp  player.cpp  player.hpp  robot.cpp  robot.hpp  run_env.cpp  server.cpp  server.hpp  test_manipulator.cpp  trainer.cpp  trainer.hpp  ur5_ik_solver.cpp  ur5_ik_solver.hpp  world.cpp  world.hpp
envs/push/python/: config.py  dqn.py  env.py  main.py  network.py  utils.py
src/: CMakeLists.txt  collision.cpp  collision_space.cpp  constraints.cpp  goal_region.cpp  joint_state_planner.cpp  kinematic.cpp  multi_body.cpp  multi_body_builder.cpp  ompl_planner.cpp  rigid_body.cpp  robot_scene.cpp  sdf_parser.cpp  sdf_parser.hpp  sdf_world.cpp  sensor.cpp  soft_body.cpp  soft_body_shape.cpp  task_space.cpp  task_space_planner.cpp  urdf_loader.cpp  urdf_robot.cpp  world.cpp
test/: CMakeLists.txt  bullet_gui.cpp  bullet_gui.hpp  gui.cpp  gui.hpp  imconv.cpp  imconv.hpp  mainwindow.cpp  mainwindow.hpp  ompl_planner.cpp  ompl_planner.hpp  planner.cpp  planning_interface.hpp  robot.cpp  robot.hpp  test_bullet.cpp  test_cartpole.cpp  test_cloth.cpp  test_cloth_sewing.cpp  test_collisions.cpp  test_gripper.cpp  test_manipulator.cpp  test_planner.cpp  test_robot.cpp  test_rope.cpp  test_sdf.cpp  test_two_joints.cpp  test_vehicle.cpp  ur5_ik_solver.cpp  ur5_ik_solver.hpp  world.cpp  world.hpp
(+111 files in other folders)
